[bumpversion]
current_version = 1.0.5

[metadata]
name = schemagen
version = 1.0.5
author = Faruq Yusuff
author_email = faruqyusuff437@gmail.com
description = A Command line tool for generating Python GraphQL implementations(with Graphene) from GraphQL schema files
license = MIT
keywords = graphql parser codegen
url = https://github.com/GoZaddy/SchemaGen
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: MIT License
	Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.6
install_requires = 
	antlr4-python3-runtime==4.9.2
	autopep8==1.5.6

[options.entry_points]
console_scripts = 
	schemagen = schemagen:main
